# FinRAG

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
configs/prompts/: v1_generation.yaml  v1_retrieval.yaml
scripts/: embed.py
src/finrag/guardrails/: __init__.py  input_guard.py  output_guard.py  pipeline.py
src/finrag/ingestion/: chunker.py
src/finrag/orchestration/: __init__.py  citation.py  generator.py  graph.py  memory.py  nodes.py  prompt_config.py  router.py  schemas.py  state.py
src/finrag/retrieval/: __init__.py  bm25_index.py  eval_harness.py  hybrid.py  reranker.py
src/finrag/vectorstore/: __init__.py  chroma_store.py
tests/: test_bm25_index.py  test_chroma_store.py  test_chunker.py  test_day8_citation.py  test_eval_harness.py  test_guardrails.py  test_hybrid.py  test_memory.py  test_orchestration.py  test_reranker.py
